python-app/template/k8s/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: python-app
  name: python-app
  namespace: default
  
spec:
  replicas: 1
  selector:
    matchLabels:
      app: python-app
  template:
    metadata:
      labels:
        app: python-app
    spec:
      containers:
      - image: aumthakkar/python-app:v2
        name: python-app
        ports:
          - containerPort: 5000
        resources: {}
