python-app/template/k8s/svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: python-app
  name: python-app
  namespace: default
spec:
  clusterIP: 10.96.120.42
  clusterIPs:
  - 10.96.120.42
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 5000
  selector:
    app: python-app
  type: ClusterIP
